--- a/frontend/src/components/chatinterface/ChatInterface.css
+++ b/frontend/src/components/chatinterface/ChatInterface.css
@@ -1,30 +1,42 @@
-.response-message {
-  color: #28a745; /* Green color */
-  background-color: #546e88; /* Light background for better readability */
-  padding: 10px;
-  border-radius: 5px;
-  margin-bottom: 10px;
-  white-space: pre-wrap; /* Ensures that line breaks are preserved */
+.chat-interface {
+  background: linear-gradient(
+    90deg,
+    rgba(217, 238, 236, 1) 30%,
+    rgba(158, 183, 247, 1) 100%
+  );
 }
-
-.chat-interface .chat-header {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 10px;
-}
-
-.chat-interface .chat-body {
-  max-height: 400px;
-  overflow-y: auto;
-  margin-bottom: 10px;
+.chat-header {
+  background-color: rgba(255, 255, 255, 0.754);
 }
 
 .chat-interface .chat-footer {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .chat-interface .chat-footer .form-control {
   flex-grow: 1;
   margin-right: 10px;
+  margin-bottom: 5px;
+}
+
+.chat-interface .chat-footer .btn,
+.chat-interface .chat-footer input[type="file"] {
+  flex-grow: 0;
+  flex-shrink: 0;
+  margin-bottom: 5px;
+}
+
+@media (max-width: 576px) {
+  .chat-interface .chat-footer .form-control {
+    flex-grow: 1;
+    margin-right: 0;
+  }
+
+  .chat-interface .chat-footer .btn,
+  .chat-interface .chat-footer input[type="file"] {
+    width: 100%;
+    margin: 5px 0;
+  }
 }
